[gd_scene load_steps=14 format=3 uid="uid://6xgfgkneeals"]

[ext_resource type="Script" path="res://scripts/characters/boss.gd" id="1_r0k3s"]
[ext_resource type="PackedScene" uid="uid://cds22hi7osiev" path="res://scenes/enemy/enemy.tscn" id="2_3jxkt"]
[ext_resource type="Texture2D" uid="uid://p18qpn0dl2yn" path="res://assets/CustomBlocks/textures.png" id="2_5lfmr"]
[ext_resource type="ArrayMesh" uid="uid://b0mh2ut430vxt" path="res://assets/CustomBlocks/entities/enemy.obj" id="3_vf1u7"]
[ext_resource type="Script" path="res://scripts/characters/HpBar.gd" id="4_hmoni"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0igbs"]
albedo_texture = ExtResource("2_5lfmr")

[sub_resource type="ViewportTexture" id="ViewportTexture_bmorm"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6btbb"]
bg_color = Color(0, 0, 0, 0.501961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hxypm"]
bg_color = Color(0.471704, 0.569977, 0.959633, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_jx3wm"]
radius = 1.0

[sub_resource type="BoxShape3D" id="BoxShape3D_pbp3d"]
size = Vector3(1, 1.57303, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_c22be"]
size = Vector3(1, 1.44879, 1)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ocmc4"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("SubViewport/HpBar:value")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:health")
properties/3/spawn = true
properties/3/replication_mode = 2

[node name="Boss" type="CharacterBody3D" groups=["Boss", "Enemies"]]
collision_layer = 3
collision_mask = 11
collision_priority = 2.0
script = ExtResource("1_r0k3s")
enemy_scene = ExtResource("2_3jxkt")

[node name="enemy_textures" type="MeshInstance3D" parent="."]
transform = Transform3D(2, -6.97574e-16, 6.97574e-16, 6.97574e-16, 2, -6.97574e-16, -6.97574e-16, 6.97574e-16, 2, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_0igbs")
mesh = ExtResource("3_vf1u7")
skeleton = NodePath("")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 2.21857, 0)
billboard = 1
texture = SubResource("ViewportTexture_bmorm")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
size = Vector2i(256, 256)
render_target_update_mode = 4

[node name="HpBar" type="ProgressBar" parent="SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -8.0
offset_right = 64.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_6btbb")
theme_override_styles/fill = SubResource("StyleBoxFlat_hxypm")
value = 100.0
show_percentage = false
script = ExtResource("4_hmoni")

[node name="DetectionArea" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)
shape = SubResource("SphereShape3D_jx3wm")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.00798035, 0)
shape = SubResource("BoxShape3D_pbp3d")

[node name="EnemyHitbox" type="Area3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="EnemyHitbox"]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, -0.0124878, 0)
shape = SubResource("BoxShape3D_c22be")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_ocmc4")

[node name="SpinTimer" type="Timer" parent="."]

[node name="ChargeTimer" type="Timer" parent="."]

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="EnemyHitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="EnemyHitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="SpinTimer" to="." method="_on_spin_timer_timeout"]
[connection signal="timeout" from="ChargeTimer" to="." method="_on_charge_timer_timeout"]
